--- a/package.json
+++ b/package.json
@@ -5,9 +5,13 @@
   "main": "bundle.js",
   "dependencies": {
     "codemirror": "^5.13.4",
+    "css-loader": "^0.23.1",
+    "node-sass": "^3.4.2",
     "raw-loader": "^0.5.1",
     "react": "^0.14.8",
     "react-dom": "^0.14.8",
+    "sass-loader": "^3.2.0",
+    "style-loader": "^0.13.1",
     "ts-loader": "^0.8.1",
     "typescript": "^1.8.9",
     "webpack": "^1.12.14",
