--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "Embeddable widget for p5.js sketches",
   "main": "bundle.js",
   "dependencies": {
+    "autoprefixer": "^6.3.6",
     "codemirror": "^5.13.4",
     "css-loader": "^0.23.1",
-    "node-sass": "^3.4.2",
+    "postcss": "^5.0.19",
+    "postcss-loader": "^0.8.2",
+    "precss": "^1.4.0",
     "raw-loader": "^0.5.1",
     "react": "^0.14.8",
     "react-dom": "^0.14.8",
-    "sass-loader": "^3.2.0",
     "style-loader": "^0.13.1",
     "ts-loader": "^0.8.1",
     "typescript": "^1.8.9",
