--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,14 @@
     "sourceMap": true,
     "jsx": "react"
   },
+  "files": [
+    "typings/custom.d.ts",
+    "typings/codemirror.d.ts",
+    "typings/react.d.ts",
+    "typings/react-dom.d.ts",
+    "lib/app.tsx",
+    "lib/editor.tsx"
+  ],
   "exclude": [
     "node_modules"
   ]
