--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "autoprefixer": "^6.3.6",
     "codemirror": "^5.13.4",
     "css-loader": "^0.23.1",
+    "esprima": "^2.7.2",
     "postcss": "^5.0.19",
     "postcss-loader": "^0.8.2",
     "precss": "^1.4.0",
