--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,9 @@
     "typings/react.d.ts",
     "typings/react-dom.d.ts",
     "typings/esprima/esprima.d.ts",
+    "typings/chai/chai.d.ts",
+    "test/main.tsx",
+    "test/test-loop-inserter.tsx",
     "lib/falafel.ts",
     "lib/main.tsx",
     "lib/app.tsx",
