--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
     "typings/chai/chai.d.ts",
     "test/main.tsx",
     "test/test-loop-inserter.tsx",
+    "lib/preview-frame.ts",
     "lib/falafel.ts",
     "lib/main.tsx",
     "lib/app.tsx",
