--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,10 +9,12 @@
     "typings/codemirror.d.ts",
     "typings/react.d.ts",
     "typings/react-dom.d.ts",
+    "typings/react-addons-pure-render-mixin.d.ts",
     "typings/esprima/esprima.d.ts",
     "typings/chai/chai.d.ts",
     "test/main.tsx",
     "test/test-loop-inserter.tsx",
+    "lib/pure-component.tsx",
     "lib/defaults.ts",
     "lib/p5-widget.ts",
     "lib/preview-frame.ts",
