Add support for implicit setup(). Fixes #31.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,11 +14,14 @@
     "typings/chai/chai.d.ts",
     "test/main.tsx",
     "test/test-loop-inserter.tsx",
+    "test/test-implicit-sketch.tsx",
     "lib/pure-component.tsx",
     "lib/defaults.ts",
     "lib/p5-widget.ts",
     "lib/preview-frame.ts",
     "lib/falafel.ts",
+    "lib/implicit-sketch.ts",
+    "lib/loop-inserter.ts",
     "lib/main.tsx",
     "lib/app.tsx",
     "lib/toolbar.tsx",
