--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "css-loader": "^0.23.1",
     "esprima": "^2.7.2",
     "postcss": "^5.0.19",
+    "postcss-custom-properties": "^5.0.0",
     "postcss-loader": "^0.8.2",
-    "precss": "^1.4.0",
     "raw-loader": "^0.5.1",
     "react": "^0.14.8",
     "react-addons-pure-render-mixin": "^0.14.8",
