Add a LGPL-2.1 license (same as p5).

--- a/package.json
+++ b/package.json
@@ -37,5 +37,5 @@
     "url": "https://github.com/toolness/p5.js-widget.git"
   },
   "author": "Atul Varma <varmaa@gmail.com>",
-  "license": "ISC"
+  "license": "LGPL-2.1"
 }
