--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "codemirror": "^5.13.4",
     "css-loader": "^0.23.1",
     "esprima": "^2.7.2",
+    "monaco-editor": "^0.31.1",
     "postcss": "^5.0.19",
     "postcss-custom-properties": "^5.0.0",
     "postcss-loader": "^0.8.2",
@@ -17,14 +18,14 @@
     "react-dom": "^0.14.8",
     "style-loader": "^0.13.1",
     "ts-loader": "^0.8.1",
-    "typescript": "^1.8.9",
+    "typescript": "^4.5.4",
     "underscore": "^1.8.3",
     "webpack": "^1.12.14"
   },
   "devDependencies": {
+    "chai": "^3.5.0",
     "mocha": "^2.4.5",
     "mocha-phantomjs": "^4.0.2",
-    "chai": "^3.5.0",
     "webpack-dev-server": "^1.14.1"
   },
   "scripts": {
