--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,13 @@
 {
   "compilerOptions": {
     "target": "es5",
+    "lib": ["es2015", "DOM"],
     "sourceMap": true,
     "jsx": "react"
   },
   "files": [
     "typings/custom.d.ts",
     "typings/codemirror.d.ts",
-    "typings/react.d.ts",
-    "typings/react-dom.d.ts",
     "typings/react-addons-pure-render-mixin.d.ts",
     "typings/esprima/esprima.d.ts",
     "typings/chai/chai.d.ts",
