--- a/package.json
+++ b/package.json
@@ -6,28 +6,29 @@
   "dependencies": {
     "autoprefixer": "^6.3.6",
     "codemirror": "^5.13.4",
-    "css-loader": "^0.23.1",
+    "css-loader": "^6.5.1",
     "esprima": "^2.7.2",
     "monaco-editor": "^0.31.1",
-    "postcss": "^5.0.19",
+    "postcss": "^8.4.5",
     "postcss-custom-properties": "^5.0.0",
-    "postcss-loader": "^0.8.2",
+    "postcss-loader": "^6.2.1",
     "raw-loader": "^0.5.1",
     "react": "^0.14.8",
     "react-addons-pure-render-mixin": "^0.14.8",
     "react-dom": "^0.14.8",
-    "style-loader": "^0.13.1",
-    "ts-loader": "^0.8.1",
+    "style-loader": "^3.3.1",
+    "ts-loader": "^9.2.6",
     "typescript": "^4.5.4",
     "underscore": "^1.8.3",
-    "webpack": "^1.12.14"
+    "webpack": "^5.65.0"
   },
   "devDependencies": {
     "@types/react": "^17.0.38",
     "chai": "^3.5.0",
     "mocha": "^2.4.5",
     "mocha-phantomjs": "^4.0.2",
-    "webpack-dev-server": "^1.14.1"
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.7.1"
   },
   "scripts": {
     "test": "webpack && mocha-phantomjs test/index.html",
