--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
     "target": "es5",
     "lib": ["es2015", "DOM"],
     "sourceMap": true,
-    "jsx": "react"
+    "jsx": "react",
+    "types": []
   },
   "files": [
     "typings/custom.d.ts",
