--- a/package.json
+++ b/package.json
@@ -24,14 +24,15 @@
   },
   "devDependencies": {
     "@types/react": "^17.0.38",
-    "chai": "^3.5.0",
+    "chai": "^4.3.4",
     "mocha": "^2.4.5",
-    "mocha-phantomjs": "^4.0.2",
+    "mocha-chrome": "^2.2.0",
+    "mocha-phantomjs": "^4.1.0",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.7.1"
   },
   "scripts": {
-    "test": "webpack && mocha-phantomjs test/index.html",
+    "test": "webpack && mocha-chrome test/index.html",
     "bundle": "webpack",
     "start": "webpack-dev-server --host 0.0.0.0"
   },
