--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
     "lib": ["es2015", "DOM"],
     "sourceMap": true,
     "jsx": "react",
-    "types": []
+    "types": [],
+    "allowSyntheticDefaultImports": true,
   },
   "files": [
     "typings/custom.d.ts",
@@ -12,6 +13,7 @@
     "typings/react-addons-pure-render-mixin.d.ts",
     "typings/esprima/esprima.d.ts",
     "typings/chai/chai.d.ts",
+    "typings/raw-loader.d.ts",
     "test/main.tsx",
     "test/test-loop-inserter.tsx",
     "test/test-implicit-sketch.tsx",
