--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,8 @@
     "lib/app.tsx",
     "lib/toolbar.tsx",
     "lib/editor.tsx",
-    "lib/preview.tsx"
+    "lib/preview.tsx",
+    "lib/undo-redo-helper.ts"
   ],
   "exclude": [
     "node_modules"
