--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "autoprefixer": "^6.3.6",
     "css-loader": "^6.5.1",
     "esprima": "^2.7.2",
+    "gh-pages": "^3.2.3",
     "monaco-editor": "^0.31.1",
     "monaco-editor-webpack-plugin": "^7.0.1",
     "postcss": "^8.4.5",
