--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
   "scripts": {
     "test": "webpack && mocha-chrome test/index.html",
     "bundle": "webpack",
-    "start": "webpack-dev-server --host 0.0.0.0"
+    "start": "webpack-dev-server --host 0.0.0.0",
+    "publish": "node update-gh-pages.js"
   },
   "repository": {
     "type": "git",
